# livaut

./: .clang-format  .gitignore  CMakeLists.txt  HARDWARE  Makefile  README  compare  jumper.conf  make-schedule  output  schedule.cmake  schedule.in  sdkconfig  sdkconfig.defaults  wifi.conf.example
data/: 1.cleanoff  1.cleanon  1.cool  1.off  1.sleepoff  1.sleepon  1.temp25  2.cool  2.off  2.sleepon  2.temp24  2.temp25
frame/: HK9810
src/: CMakeLists.txt  Kconfig.projbuild  aeha-protocol.c  aeha-protocol.h  bus.c  bus.h  calc.h  check.h  convert-data.c  convert-data.h  debug.h  execute-action.c  execute-action.h  helper.h  i2c-bus.c  i2c-bus.h  ir.c  ir.h  jumper.c  jumper.h  list.h  livaut.c  memory.c  memory.h  nvs.c  nvs.h  power.c  power.h  rmt.h  run-action.c  run-action.h  sign.c  sign.h  sntp.c  sntp.h  strbuf.c  strbuf.h  term-io.c  term-io.h  termio.c  (+8 more)
src/action/: auto-control.c  receive-signal.c  schedule-signal.c  send-signal.c
